--- a/SCSS/sections/partials/index.scss
+++ b/SCSS/sections/partials/index.scss
@@ -6,5 +6,7 @@
 @import '_jobs-benefits.scss';
 @import '_conversion-logo';
 @import '_apply-bottom.scss';
+@import '_cta.scss';
 @import '_footer.scss';
+@import '_matrix.scss';
 
