--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,4 +1,5 @@
 {% include "partials/_header" %}
+{% include "partials/_seo" %}
 {% include "partials/_nav" %}
 {% include "partials/_parallax" %}
 {% include "partials/_cards" %}
@@ -11,6 +12,7 @@
 
 {# VIDEO INCLUDES #}
 {% include "partials/_video" %}
+{% include "partials/_cta" %}
 {% include "partials/_footer" %}
 
 
