--- a/templates/jobs/searchjobs/results.twig
+++ b/templates/jobs/searchjobs/results.twig
@@ -1,4 +1,9 @@
-{% extends "_layout" %}
+{# RESULTS FOR JOB SEARCH
+THE SEO TEMPLATE IS INTENTIONALLY OMITTED
+IN ORDER TO PREVENT TEMPLATE ERROR #}
+
+{% include "partials/_header" %}
+{% include "partials/_nav" %}
 
 {% block main %}
 
@@ -137,6 +142,6 @@
     </div>
 
 {% endif %}
-
-
 {% endblock %}
+
+{% include "partials/_footer" %}
