--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -1,14 +1,5 @@
   <footer class="footer">
-  <div class="py-5 text-center text-white top-footer">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto col-md-12">
-          <h3 class="display-4">Ready to join the best carrier to boost your driving career?</h3> <a class="btn btn-success btn-lg" href="#"><i class="fa fa-fw fa-handshake-o"></i>TAKE ME THERE</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3 bg-dark bottom-footer">
+  <div class="py-3 bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center align-items-center text-white">
