--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -1,3 +1,13 @@
+{# PLEAS READ THE _header.twig TEMPLATE TO SEE WHY THE HEAD IS BEING CLOSED HERE #}
+
+ </head>
+  {# utility-site-container is a utility class located in utility SCSS folder #}
+  <div class="utility-site-container">
+  <body class="container-fluid p-0 utility-site-content bg-light" onload="ReadCookie()">   
+
+
+{# NAV BEGINS BELOW #}
+
 <nav class="navbar navbar-expand-md navbar-dark sticky-top" id="main-nav">
   <div class="container"> <a class="navbar-brand" href="/">
       {# <i class="fa d-inline fa-lg fa-stop-circle"></i> #}
