--- a/SCSS/sections/partials/_video.scss
+++ b/SCSS/sections/partials/_video.scss
@@ -1,3 +1,8 @@
 .video-container{
-    
+    .video-content{
+        background-color: #fff;
+        h1{
+            // font-weight: 400;
+        }
+    }
 }
