--- a/templates/partials/_cards.twig
+++ b/templates/partials/_cards.twig
@@ -6,8 +6,8 @@
           <div class="row py-2 mx-auto" style="">
             <div class="col-md-12">                
                 
-              <h3 class="text-secondary"><i class="fa fa-fw fa-user"></i>{{entry.offeringHeadline}}</h3>
-              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
+              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.offeringHeadline}}</h3>
+              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
           </div>
@@ -15,8 +15,8 @@
         <div class="col-md-4" style="">
           <div class="row py-2 mx-auto" style="">
             <div class="col-md-12">
-              <h3 class="text-secondary"><i class="fa fa-fw fa-truck"></i>{{entry.qualificationHeadline}}</h3>
-              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="fa fa-fw fa-arrow-circle-o-right"></i><i class="fa fa-fw fa-truckz"></i>Learn More</a>
+              <h3 class="text-secondary"><i class="fa fa-truck"></i>&nbsp; {{entry.qualificationHeadline}}</h3>
+              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
             </div>
           </div>
         </div>
@@ -24,7 +24,10 @@
           <div class="row applyBanner py-2 px-1 mx-auto" style="">
             <div class="col-md-12">
               <h3 class="" contenteditable="true"><i class="fa fa-fw fa-search"></i>Find Your Next Job</h3>
-              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p><a class="btn btn-block btn-lg btn-success" href="/jobs"><i class="fa fa-fw fa-search"></i><i class="fa fa-fw fa-truckz"></i>FIND MY NEXT JOB</a>
+              <p class="lead" style="">We've made it easy to find your next job. Search from hundreds of jobs throughout the country and learn why ABC is the best.<br></p>
+              
+              <a class="btn btn-block btn-lg btn-success" href="/jobs"><i class="fa fa-search"></i> &nbsp;FIND MY NEXT JOB</a>
+              
               <h5 class="pt-3">NEED TO TALK? Call a recruiter now. 888-888-8888</h5>
             </div>
           </div>
