--- a/SCSS/sections/partials/_video.scss
+++ b/SCSS/sections/partials/_video.scss
@@ -1,6 +1,6 @@
 .video-container{
     .video-content{
-        background-color: #fff;
+        // background-color: #fff;
         h1{
             // font-weight: 400;
         }
