--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -3,66 +3,11 @@
 {% include "partials/_header" %}
 {% include "partials/_nav" %}
 {% include "partials/_parallax" %}
-{% include "partials/_cards" %}
+{% include "partials/_cards-page" %}
 {% include "partials/_feature" %}
 
 
-<div class="container-fluid matrix-container">
-{% for block in entry.pageContent.all() %}
-{% switch block.type %}
-
-{% case "textBlock" %}
-<div class="pb-5">
-<div class="container matirx-textBlock pb-5">
-    <h3 class="display-4">{{block.header}}</h3>
-    <p class="">{{block.textArea}}</p>
-</div>
-</div>
-
-{% case "imageblock" %}
-<div class="pb-5">
-<div class="container matrix-image pb-5">
-    <div class="row">
-        <img src=" {{block.image.one().getUrl() }} " alt="" class="img-fluid">
-        <p class="caption">{{block.imageCaption}}</p>
-    </div>
-</div>
-</div>
-
-{% case "textLeft" %}
-<div class="pb-5">
-<div class="container matrix-left pb-5">
-    <div class="row">
-        <div class="col-sm-12 col-md-8">
-            {{block.textArea}}
-        </div>
-        <div class="col-sm-12 col-md-4 text-center">
-            <img src="{{block.imageRight.one().getUrl() }}" alt="" class="img-fluid">
-        </div>
-    </div>
-</div>
-</div>
-
-{% case "textRight" %}
-<div class="pb-5">
-<div class="container matrix-right pb-5">
-    <div class="row">
-        <div class="col-sm-12 col-md-4 text-center">
-            <img src="{{block.imageLeft.one().getUrl()}}" alt="" class="img-fluid">
-        </div>
-        <div class="col-sm-12 col-md-8">
-            {{block.textArea}}
-        </div>
-    </div>
-</div>
-</div>
-
-
-{% endswitch %}
-
-
-{% endfor %}
-</div>
+{% include "partials/_matrix" %}
 
 {% include "partials/_video" %}
 {% include "partials/_footer" %}
