--- a/templates/partials/_video.twig
+++ b/templates/partials/_video.twig
@@ -1,5 +1,5 @@
   <!--- VIDEO CONTAINER -->
-  <div class="p-5 bg-light">
+  <div class="py-5">
     <div class="container video-container">
       <div class="row">
         <div class="col-md-6 p-0">
