adding images block

--- a/templates/partials/_matrix.twig
+++ b/templates/partials/_matrix.twig
@@ -11,7 +11,7 @@
 </div>
 </div>
 
-{% case "imageblock" %}
+{% case "imageBlock" %}
 <div class="py-5" style="background-color:{{block.bgColor}}">
 <div class="container matrix-image py-5" >
     <div class="row">
