fixing job resutls

--- a/SCSS/sections/jobs/_jobs-entry.scss
+++ b/SCSS/sections/jobs/_jobs-entry.scss
@@ -23,7 +23,7 @@
             .card {
                 ul {
                     li {
-                        color: green !important;
+                        // color: green !important;
                         font-weight: bold;
                         font-size: .9rem;
                     }
