--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -10,8 +10,8 @@
 
 .parallax {
   background-attachment: fixed;
-  background-image: url(https://images.pexels.com/photos/93398/pexels-photo-93398.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-  background-position: bottom;
+  background-image: url("/images/truck-at-night.jpg");
+  background-position: bottom center;
   background-size: cover;
   background-repeat: no-repeat;
   background-color: black;
