--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -9,5 +9,5 @@
 
 {% include "partials/_matrix" %}
 
-{% include "partials/_video" %}
+{# {% include "partials/_video" %} #}
 {% include "partials/_footer" %}
