--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -6,9 +6,8 @@
           <div class="row py-2 mx-auto" style="">
             <div class="col-md-12">                
                 
-              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.offeringHeadline}}</h3>
-              <p class="lead">{{entry.offeringContent}}</p>
-              <p class="">{{entry.qualificationContent}}</p>
+              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.summaryHeadline}}</h3>
+              <p class="lead">{{entry.summaryContent}}</p>
               <a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
