fixing headers on individual page

--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -6,8 +6,8 @@
           <div class="row py-2 mx-auto" style="">
             <div class="col-md-12">                
                 
-              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverview}}</h3>
-              <p class="lead">{{entry.companyOverviewHeader}}</p>
+              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverviewHeader}}</h3>
+              <p class="lead">{{entry.companyOverview}}</p>
               <a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
