--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -4,7 +4,7 @@
 {% include "partials/_nav" %}
 {% include "partials/_parallax" %}
 {% include "partials/_cards-page" %}
-{% include "partials/_feature" %}
+{# {% include "partials/_feature" %} #}
 
 
 {% include "partials/_matrix" %}
