--- a/templates/partials/_feature.twig
+++ b/templates/partials/_feature.twig
@@ -3,8 +3,8 @@
     <div class="container feature-section">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="display-4 text-center text-secondary">Do not wait. Act</h3>
-          <p class="mb-4 text-center lead">I am alone, and feel the charm of existence in this spot.</p>
+          <h3 class="display-4 text-center text-secondary">Needs to be a header</h3>
+          <p class="mb-4 text-center lead">Need to be a subheader</p>
           <div class="row">
             <div class="p-3 col-md-8">
             {# HEADER #}
