--- a/templates/partials/_matrix.twig
+++ b/templates/partials/_matrix.twig
@@ -9,7 +9,7 @@
 <div class="p-2" style="background-color:{{block.bgColor}}">
 <div class="container matirx-textBlock py-5">
     <h3 class="display-4 text-secondary">{{block.header}}</h3>
-    <p class="">{{block.textArea}}</p>
+    <div>{{block.textArea}}</div>
     {% if block.ctaLink is not empty %}    
     <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
     {% endif %}
@@ -40,7 +40,7 @@ box-shadow: 0px 26px 34px -12px #000000;">
     <div class="row">
         <div class="col-sm-12 col-md-7 py-3">
             <h3 class="display-4 text-secondary">{{block.header}}</h3>
-            {{block.textArea}}
+            <div>{{block.textArea}}</div>
              {% if block.ctaLink is not empty %}    
                 <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
             {% endif %}
@@ -69,7 +69,7 @@ box-shadow: 0px 26px 34px -12px #000000;">
         </div>
         <div class="col-sm-12 col-md-7 offset-md-1 pt-3">
             <h3 class="display-4 text-secondary pt-5">{{block.header}}</h3>
-            {{block.textArea}}
+            <div>{{block.textArea}}</div>
             {% if block.ctaLink is not empty %}    
                 <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
             {% endif %}
