--- a/templates/partials/_matrix.twig
+++ b/templates/partials/_matrix.twig
@@ -19,11 +19,10 @@
 {# IMAGE BLOCK #}
 
 {% case "imageBlock" %}
-<div class="pb-5" style="background-color:{{block.bgColor}}; -webkit-box-shadow: 0px 26px 34px -12px #000000; 
-box-shadow: 0px 26px 34px -12px #000000;">
+<div class="pb-5" style="background-color:{{block.bgColor}};">
 <div class="container matrix-image" >
     <div class="row py-4">
-        <img src=" {{block.image.one().getUrl() }} " alt="" class="img-fluid">
+        <img src=" {{block.image.one().getUrl() }} " alt="" class="img-fluid" style="-webkit-box-shadow: 0px 26px 34px -12px #000000; box-shadow: 0px 26px 34px -12px #000000;">
         <p class="caption">{{block.imageCaption}}</p>
         {% if block.ctaLink is not empty %}    
         <a href="{{block.ctaLink}}" class="btn btn-primary btn-lg">{{block.cta}}</a>
