--- a/SCSS/sections/partials/_indexFeatures.scss
+++ b/SCSS/sections/partials/_indexFeatures.scss
@@ -1,3 +1,6 @@
 .feature-section{
-    
+    img{
+        -webkit-box-shadow: 0px 26px 34px -12px #000000;
+         box-shadow: 0px 26px 34px -12px #000000;
+    }
 }
