--- a/SCSS/sections/partials/_matrix.scss
+++ b/SCSS/sections/partials/_matrix.scss
@@ -5,6 +5,10 @@
     .matrix-image {
         max-height: 400px;
         overflow: hidden;
+
+        img{
+            -webkit-box-shadow: 0px 26px 34px -12px #000000; box-shadow: 0px 26px 34px -12px #000000;
+        }
     }
 
     .matrix-right {
@@ -19,7 +23,7 @@
     .matrix-left {
         img{
         max-height: 400px;
-        overflow: hidden;
+        overflow: hidden;        
         }
     }
 }
