--- a/SCSS/sections/partials/_parallax.scss
+++ b/SCSS/sections/partials/_parallax.scss
@@ -6,5 +6,15 @@
     background-repeat: no-repeat;
     background-color: black;
     min-height: 400px;
+
+    h1{
+        text-shadow: 0px 0px 13px #000000;
+    }
+
+    p{
+        font-size: 2em;
+        // font-weight: 800;
+        color: #fff;;
+    }
 }
 
