--- a/SCSS/sections/partials/_cards-section.scss
+++ b/SCSS/sections/partials/_cards-section.scss
@@ -1,18 +1,30 @@
-.cards-section{
+.cards-section {
     background-color: #fff;
     margin-top: -50px;
     padding: 25px;
-        
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
 
-    .btn-red{
-        background-color: #dc3545;
-        color:#fff;
+    .header-shadow {
+        -webkit-box-shadow: inset 0px 0px 62px 0px rgba(0, 0, 0, 0.05);
+        -moz-box-shadow: inset 0px 0px 62px 0px rgba(0, 0, 0, 0.05);
+        box-shadow: inset 0px 0px 62px 0px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
     }
-    .applyBannerColumn{
+
+    .btn-red {
+        background-color: #dc3545;
         color: #fff;
-        .applyBanner{
+    }
+
+    .applyBannerColumn {
+        color: #fff;
+
+        .applyBanner {
             background-color: #707070;
+            border-radius: 10px;
+
         }
     }
 }
-
