--- a/templates/partials/_cards-page.twig
+++ b/templates/partials/_cards-page.twig
@@ -4,11 +4,11 @@
       <div class="row pb-2">
         <div class="col-md-8" style="">
           <div class="row py-2 mx-auto" style="">
-            <div class="col-md-12">                
+            <div class="col-md-12 pb-5">                
                 
-              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverviewHeader}}</h3>
+              <h3 class="text-secondary header-shadow p-2"><i class="fa fa-user"></i> &nbsp; {{entry.companyOverviewHeader}}</h3>
               <p class="lead">{{entry.companyOverview}}</p>
-              <a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+              <a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
           </div>
