--- a/templates/partials/_cards.twig
+++ b/templates/partials/_cards.twig
@@ -4,19 +4,19 @@
       <div class="row pb-2">
         <div class="col-md-4" style="">
           <div class="row py-2 mx-auto" style="">
-            <div class="col-md-12">                
+            <div class="col-md-12 pb-5">                
                 
-              <h3 class="text-secondary"><i class="fa fa-user"></i> &nbsp; {{entry.offeringHeadline}}</h3>
-              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+              <h3 class="text-secondary header-shadow p-2"><i class="fa fa-user"></i> &nbsp; {{entry.offeringHeadline}}</h3>
+              <p class="lead">{{entry.offeringContent}}</p><a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
 
             </div>
           </div>
         </div>
         <div class="col-md-4" style="">
           <div class="row py-2 mx-auto" style="">
-            <div class="col-md-12">
-              <h3 class="text-secondary"><i class="fa fa-truck"></i>&nbsp; {{entry.qualificationHeadline}}</h3>
-              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-red btn-sm" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
+            <div class="col-md-12 pb-5">
+              <h3 class="text-secondary header-shadow p-2"><i class="fa fa-truck"></i>&nbsp; {{entry.qualificationHeadline}}</h3>
+              <p class="lead">{{entry.qualificationContent}}</p><a class="btn btn-red btn-md" href="#"><i class="far fa-arrow-alt-circle-right"></i> &nbsp;Learn More</a>
             </div>
           </div>
         </div>
